--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
+folium==0.16.0
+geopandas==0.14.3
+numpy==1.26.4
+pandas==2.2.2
+Pillow==10.3.0
+Shapely==2.0.4
+streamlit==1.33.0
+streamlit_folium==0.19.0
 
